--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  tuple: ^2.0.0
+  animated_background: ^2.0.0
+  flutter_tabler_icons: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +52,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/day1.txt
+    - assets/day2.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
