--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
     - assets/day1.txt
     - assets/day2.txt
     - assets/day3.txt
+    - assets/day4.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
